@@ -1,6 +1,7 @@
 0.06
  - Add test for globe coordinate with negative value.
  - Fix JSON null in perl structure.
+ - Update copyright years.
 
 0.05 2020-12-23T00:38:25+01:00
  - Add Form.
